# grunner

./: .gitignore  AGENTS.md  AUDIT.md  CODE_OF_CONDUCT.md  Cargo.toml  GRUNNER_AUDIT.md  PKGBUILD  README.md  SECURITY.md  TODO.md  audit.md  benchmark.sh  build.sh  grunner-1.0.0-1-x86_64.pkg.tar.zst  grunner-debug-1.0.0-1-x86_64.pkg.tar.zst  grunner_audit_v2_delta.md  grunner_code_audit.md  to_fix.md
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: grunner.desktop  org.nihmar.grunner.desktop
docs/: API.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG_TEMPLATE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  ERROR_LOGGING.md  INDEX.md  OPTIMIZATION_REPORT.md  OVERVIEW.md  QUICK_OPTIMIZATIONS.md  README.md  ROADMAP.md  USER_GUIDE.md  pull_request_template.md
flatpak/: .gitignore  README.md  build.sh  org.nihmar.grunner.appdata.xml  org.nihmar.grunner.desktop  org.nihmar.grunner.yml
packaging/: grunner.desktop  grunner.metainfo.xml  org.nihmar.grunner.desktop  org.nihmar.grunner.metainfo.xml
packaging/flatpak/: generated-sources.json  grunner.flatpak  grunner.yml  org.nihmar.grunner.yml
packaging/flatpak/flatpak-repo/: summary  summary.idx
pkg/grunner/: .BUILDINFO  .MTREE  .PKGINFO
pkg/grunner-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: actions.rs  app_item.rs  app_mode.rs  bookmark_item.rs  bookmarks.rs  calc_item.rs  calculator.rs  clipboard_history.rs  clipboard_item.rs  cmd_item.rs  command_handler.rs  config.rs  global_state.rs  history.rs  item_activation.rs  launcher.rs  lib.rs  list_model.rs  logging.rs  main.rs  obsidian_bar.rs  obsidian_item.rs  power_bar.rs  search_provider.rs  search_result_item.rs  settings_window.rs  style.css  theme.rs  ui.rs  utils.rs  workspace_bar.rs
src/actions/: file.rs  launcher.rs  mod.rs  obsidian.rs  power.rs  settings.rs  workspace.rs
src/core/: callbacks.rs  config.rs  global_state.rs  theme.rs
src/core/theme/: dark.css  dracula.css  light.css  nord.css  themes.rs
src/items/: app_item.rs  cmd_item.rs  mod.rs  obsidian_item.rs  search_result_item.rs
src/model/: debounce.rs  list_model.rs  model_config.rs  search_state.rs
src/model/items/: app_item.rs  cmd_item.rs  mod.rs  obsidian_item.rs  search_result_item.rs
src/providers/: dbus_provider.rs  file_search.rs  mod.rs  subprocess.rs
src/providers/dbus/: discovery.rs  icons.rs  mod.rs  query.rs  types.rs
src/settings_window/: mod.rs  save.rs
src/settings_window/tabs/: commands.rs  general.rs  info.rs  mod.rs  (+3 more)
src/theme/: catppuccin_latte.css  catppuccin_mocha.css  dark.css  dracula.css  gruvbox_dark.css  gruvbox_light.css  light.css  nord.css  tokio_night.css
src/ui/: context_menu.rs  list_factory.rs  obsidian_bar.rs  pinned_strip.rs  power_bar.rs  result_row.rs  style.css  window.rs  window_context.rs  workspace_bar.rs
src/utils/: clipboard.rs  desktop.rs
tests/: config_integration_tests.rs
(+10 files in other folders)
