[package]
name = "grunner"
version = "0.1.0"
edition = "2024"
description = "A rofi-like application launcher for GNOME, written in Rust"

[[bin]]
name = "grunner"
path = "src/main.rs"

[dependencies]
gtk4 = "0.10"
libadwaita = { version = "0.8", features = ["v1_6"] }
glib = "0.21"
fuzzy-matcher = "0.3"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
evalexpr = "8.0"
regex = "1.10"
chrono = "0.4"
urlencoding = "2.1"
zbus = "5.14.0"
futures = { version = "0.3", default-features = false, features = ["async-await", "alloc"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "time", "macros", "net"] }
rayon = "1"
bincode = "1"