[package]
name = "grunner"
version = "2.1.0"
edition = "2024"
description = "A rofi-like application launcher for GNOME, written in Rust"

[lib]
name = "grunner"
path = "src/lib.rs"

[[bin]]
name = "grunner"
path = "src/main.rs"

[dependencies]
gtk4 = "0.11"
libadwaita = { version = "0.9.1", features = ["v1_6"] }
glib = "0.22"
fuzzy-matcher = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

log = "0.4"
simplelog = "0.12"
systemd-journal-logger = { version = "2.2.2", optional = true }
syslog = { version = "7.0", optional = true }
dirs = "6.0"

chrono = { version = "0.4", default-features = false, features = ["clock"] }
urlencoding = "2.1"
zbus = "5.14.0"
futures = { version = "0.3", default-features = false, features = ["async-await", "alloc"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "time", "macros", "net"] }
rayon = "1"
bincode = "1.0"
jwalk = "0.8"
target-lexicon = "0.13.5"

[features]
default = ["journal"]
journal = ["dep:systemd-journal-logger"]
syslog = ["dep:syslog"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
incremental = false
overflow-checks = false
